@@ -3,13 +3,24 @@ package test.factory;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.failBecauseExceptionWasNotThrown;
 
+import java.util.ArrayList;
+import java.util.List;
+import java.util.stream.Collectors;
 import org.testng.Assert;
+import org.testng.IParameterInfo;
+import org.testng.ITestListener;
+import org.testng.ITestResult;
 import org.testng.TestListenerAdapter;
 import org.testng.TestNG;
 import org.testng.TestNGException;
+import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 import test.InvokedMethodNameListener;
 import test.SimpleBaseTest;
+import test.factory.issue3111.SimpleFactoryPoweredTestSample;
+import test.factory.issue3111.SimpleFactoryPoweredTestWithIndicesSample;
+import test.factory.issue3111.SimpleFactoryPoweredTestWithoutDataProviderSample;
+import test.factory.issue3111.SimpleFactoryPoweredTestWithoutDataProviderWithIndicesSample;
 
 public class FactoryIntegrationTest extends SimpleBaseTest {
 
@@ -22,7 +33,9 @@ public class FactoryIntegrationTest extends SimpleBaseTest {
     } catch (TestNGException e) {
       assertThat(e)
           .hasMessage(
-              "\nCan't invoke public java.lang.Object[] test.factory.GitHub876Sample.createInstances(): either make it static or add a no-args constructor to your class");
+              "\nCan't invoke public java.lang.Object[] test.factory.GitHub876Sample"
+                  + ".createInstances(): either make it static or add a no-args constructor to "
+                  + "your class");
     }
   }
 
@@ -46,7 +59,8 @@ public class FactoryIntegrationTest extends SimpleBaseTest {
     } catch (TestNGException e) {
       assertThat(e)
           .hasMessage(
-              "\ntest.factory.BadMethodReturnTypeFactory.createInstances MUST return [ java.lang.Object[] or org.testng.IInstanceInfo[] ] but returns java.lang.Object");
+              "\ntest.factory.BadMethodReturnTypeFactory.createInstances MUST return [ java.lang"
+                  + ".Object[] or org.testng.IInstanceInfo[] ] but returns java.lang.Object");
     }
   }
 
@@ -64,5 +78,32 @@ public class FactoryIntegrationTest extends SimpleBaseTest {
         .contains(
             "FactoryBaseSample{1}#f",
             "FactoryBaseSample{2}#f", "FactoryBaseSample{3}#f", "FactoryBaseSample{4}#f");
+  }
+
+  @Test(dataProvider = "testdata", description = "GITHUB-3111")
+  public void ensureCurrentIndexWorksForFactoryPoweredTests(Class<?> klass, Integer[] expected) {
+    List<IParameterInfo> params = new ArrayList<>();
+    TestNG testng = create(klass);
+    testng.addListener(
+        new ITestListener() {
+          @Override
+          public void onTestSuccess(ITestResult result) {
+            params.add(result.getMethod().getFactoryMethodParamsInfo());
+          }
+        });
+    testng.run();
+    List<Integer> actualIndices =
+        params.stream().map(IParameterInfo::currentIndex).sorted().collect(Collectors.toList());
+    assertThat(actualIndices).containsExactly(expected);
+  }
+
+  @DataProvider(name = "testdata")
+  public Object[][] testdata() {
+    return new Object[][] {
+      {SimpleFactoryPoweredTestSample.class, new Integer[] {0, 1, 2}},
+      {SimpleFactoryPoweredTestWithIndicesSample.class, new Integer[] {0}},
+      {SimpleFactoryPoweredTestWithoutDataProviderSample.class, new Integer[] {0, 1, 2}},
+      {SimpleFactoryPoweredTestWithoutDataProviderWithIndicesSample.class, new Integer[] {0}},
+    };
   }
 }
